# galarie

./: .dockerignore  .eslintignore  .gitignore  Dockerfile  Makefile  README.md  startup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  supervisord.conf
.devcontainer/observability/: docker-compose.yaml  otel-collector-config.yaml
.github/workflows/: dockerhub-publish.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
backend/: Cargo.toml
backend/src/: config.rs  indexer.rs  lib.rs  main.rs  o11y.rs
backend/src/api/: mod.rs  search.rs  stream.rs  thumbnails.rs
backend/src/cache/: mod.rs
backend/src/media/: thumbnails.rs
backend/src/o11y/: mod.rs  telemetry.rs
backend/src/routes/: mod.rs
backend/src/services/: mod.rs  search.rs
backend/src/tags/: mod.rs  parser.rs
backend/tests/: contract.rs  integration.rs
backend/tests/contract/: index_rebuild.rs  media_search.rs  media_stream.rs  media_thumbnail.rs  support.rs
backend/tests/integration/: media_stream.rs  search_cache.rs
frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/tests/: app.spec.ts
media/: README.md
sample-media/: README.md
specs/: ci-dockerhub.md
specs/015-shared-api-error-handling/: tasks.md
specs/016-frontend-skeleton/: tasks.md
specs/017-playwright-harness/: tasks.md
specs/105-stream-integration-test/: research.md
specs/112-api-search/: tasks.md
(+26 files in other folders)
