[package]
name = "galarie-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
opentelemetry = { version = "0.31", features = ["trace", "logs", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "logs", "metrics", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry-appender-tracing = "0.31.1"
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "fs", "process"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
walkdir = "2.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }

[dev-dependencies]
tempfile = "3.10"
which = "6.0"
tower = "0.5"
